Stephen/JordanB - Changed padding and added text-overflow to select to fix long text touching chevron

--- a/src/sass/modules/form-elements/base-inputs.scss
+++ b/src/sass/modules/form-elements/base-inputs.scss
@@ -53,7 +53,7 @@ select {
     font-family: $font-family;
     box-sizing: border-box;
     line-height: 1.125em;
-    padding: 15px 10px;
+    padding: 15px 40px 15px 10px;
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image: url('http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png');
@@ -61,6 +61,7 @@ select {
     background-position: right 20px center;
     background-color: #fff;
     margin-bottom: 20px;
+    text-overflow: ellipsis;
 
     &::-ms-expand {
         display: none;
